--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "igor-tv/omnipay-yookassa",
     "type": "library",
-    "description": "YooKassa driver for Omnipay payment processing library",
+    "description": "YooKassa driver for Omnipay payment processing library, custom fork",
     "keywords": [
         "php",
         "omnipay",
